style: align search loupe icon correctly on input left

--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -84,7 +84,7 @@
 
 .search .search-input-container input {
   width: 100%;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.5rem 1rem 0.5rem;
   font-size: 1.125rem;
   border: none;
   border-radius: 24px;
@@ -96,11 +96,20 @@
   outline: none;
 }
 
-.search .search-icon {
-  margin-right: 1.5rem;
-  color: #666;
-  width: 24px;
-  height: 24px;
+.search .search-input-container .icon {
+  margin-left: 1.25rem;
+  margin-right: 0.25rem;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+}
+
+.search .search-input-container .icon img {
+  width: 100%;
+  height: 100%;
 }
 
 /* Results Container */
